--- a/W1 getting Julia working.ipynb
+++ b/W1 getting Julia working.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Installing Julia\n",
     "\n",
-    "Download Julia from [julialang.org](https://julialang.org/). For Mac, install the latest version (1.8.4). For Windows, there is a problem with installing plotting tools with this version, so I suggest you install the long-term stable version (1.6.7).\n",
+    "Download Julia from [julialang.org](https://julialang.org/). Install the latest version (1.8.5). For Windows, there is a problem with installing plotting tools with the older version 1.8.4 that was available from late December to January 9, 2023, so be sure you have version 1.8.5.\n",
     "\n",
     "Once you install Julia, launch the application.\n",
     "\n",
@@ -103,7 +103,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
