--- a/W1-Intro-to-Julia.ipynb
+++ b/W1-Intro-to-Julia.ipynb
@@ -106,28 +106,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a7f620e6-a6ae-43d5-98e5-7a93bdd1b79c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "(4611686018427387904, -9223372036854775808, 0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2^64"
+    "2^62, 2^63, 2^64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "6dec4dac-38b4-4760-81f1-1f9207c96761",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"0100000000000000000000000000000000000000000000000000000000000000\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bitstring(2^62)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "86056ce4-84a1-4d10-a81e-2e2897be4726",
    "metadata": {},
    "outputs": [
@@ -137,18 +158,18 @@
        "0.5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 / 2 "
+    "1 / 2 # Division with / yields a Float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "c630b44d-62a5-4b4a-900e-8f7050f99500",
    "metadata": {},
    "outputs": [
@@ -158,13 +179,76 @@
        "Float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "typeof(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "492eb86b-7e0d-4256-b6e0-16cef24ca83c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "typeof(10/5) # even if the result in math class would be integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d34f999c-4ef2-42a1-b3ae-290e86095bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, Int64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 ÷ 2, typeof( 10 ÷ 2) # if you really want an integer; type \\div<TAB>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7df8e023-76c4-4df5-ac40-6a618def85dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 ÷ 3 # Rounding"
    ]
   },
   {
@@ -216,7 +300,7 @@
     }
    ],
    "source": [
-    "sqrt(256)"
+    "sqrt(256)  # Type stability; generally a squareroot is a floating point value, so they all are, even when the result is an integer"
    ]
   },
   {
@@ -703,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "b483dbba-a937-42ad-8c20-04d3ad44e0d0",
    "metadata": {},
    "outputs": [
@@ -713,13 +797,13 @@
        "square (generic function with 1 method)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "square(x) = x*x"
+    "square(x) = x*x # generic means it works for any numeric type"
    ]
   },
   {
@@ -745,23 +829,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "fd2ffd0d-8eb3-414c-b281-d07e9e8774b0",
+   "execution_count": 20,
+   "id": "7c2bb394-8a62-4fef-b426-0709fffe81d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "256"
+       "289//81"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "square(16)"
+    "square( 17 // 9 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ac76ba89-aab7-4e4c-94f0-72ac5ef02ae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.19 - 1.2im"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square( 0.5 - 1.2im )"
    ]
   },
   {
@@ -1800,7 +1905,7 @@
     "r1, r2 = (-b - d)/(2*a), (-b + d)/(2*a)\n",
     "@show (r1, r2)\n",
     "# Find second root, once the good root is known\n",
-    "r3 = c/(r2*a)"
+    "@show r3 = c/(r2*a)"
    ]
   },
   {
@@ -2114,6 +2219,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11e5faf4-cae7-4b2e-b9b2-97e0682dc8af",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "A friend claims that the integer 42 can be written as the sum of the cubes of 12602123297335631, 80435758145817515, and -80538738812075974. What happens if we try to verify this with Julia? We will use three kinds of numbers: integers, floating point numbers, and \"big integers\". \n",
+    "\n",
+    "First we write the sums of the cubes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "52edfe2b-7ab4-46df-8a71-81c63293df83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12602123297335631 ^ 3 + 80435758145817515 ^ 3 + (-80538738812075974) ^ 3 = 42\n",
+      "1.2602123297335632e16 ^ 3 + 8.043575814581752e16 ^ 3 + (-8.053873881207597e16) ^ 3 = 1.661534994731145e35\n",
+      "BigInt(12602123297335631) ^ 3 + BigInt(80435758145817515) ^ 3 + BigInt(-80538738812075974) ^ 3 = 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "@show 12602123297335631^3 + 80435758145817515^3 + (-80538738812075974)^3\n",
+    "@show 12602123297335631.0^3 + 80435758145817515.0^3 + (-80538738812075974.0)^3\n",
+    "@show BigInt(12602123297335631)^3 + BigInt(80435758145817515)^3 + BigInt(-80538738812075974)^3;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7c1c496-ce10-43f9-afdf-748abe90911b",
+   "metadata": {},
+   "source": [
+    "We get two different answers. Which is right?\n",
+    "Compute each term in the sum separately:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1b740c44-7e56-46f0-b3f8-61eb4512b0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12602123297335631 ^ 3, 80435758145817515 ^ 3, (-80538738812075974) ^ 3) = (-5107153814879493905, -3138121576654805741, 8245275391534299688)\n",
+      "(1.2602123297335632e16 ^ 3, 8.043575814581752e16 ^ 3, (-8.053873881207597e16) ^ 3) = (2.001387454481789e48, 5.204122115824975e50, -5.2241359903697905e50)\n",
+      "(BigInt(12602123297335631) ^ 3, BigInt(80435758145817515) ^ 3, BigInt(-80538738812075974) ^ 3) = (2001387454481788542313426390100466780457779044591, 520412211582497361738652718463552780369306583065875, -522413599036979150280966144853653247149764362110424)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@show 12602123297335631^3 , 80435758145817515^3 , (-80538738812075974)^3\n",
+    "@show 12602123297335631.0^3 , 80435758145817515.0^3 , (-80538738812075974.0)^3\n",
+    "@show BigInt(12602123297335631)^3 , BigInt(80435758145817515)^3 , BigInt(-80538738812075974)^3;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03cf2c58-f51c-4d9e-821f-5493f9a8fd94",
+   "metadata": {},
+   "source": [
+    "So integers (Int64, BigInt) get the sum right, but Float64 and BigInt get each term right (approximately). Explain what's going on in each calculation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1a7c2c3-0cfd-4cf5-b74e-ebead2341d97",
    "metadata": {},
    "source": [
@@ -2140,14 +2318,6 @@
     "* typeof, bitstring, sign, exponent, significand, eps, nextfloat, prevfloat, floatmin, floatmax\n",
     "* Int64, Float64 and other types as functions\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9b525a6-6e2e-43a7-9690-e7010bfa2b25",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
