--- a/W2-topics.ipynb
+++ b/W2-topics.ipynb
@@ -51,13 +51,96 @@
     "  * Solve $Lz=b$ using forward substitution\n",
     "  * Solve $Ux = z$ using backward substition\n",
     "\n",
-    "$L$ and $U$ systems are easier to solve than $A$ system. If you want to solve $Ax=b$ for one $A$ and many $b$ then you can save a lot of time.\n"
+    "$L$ and $U$ systems are easier to solve than $A$ system. If you want to solve $Ax=b$ for one $A$ and many $b$ then you can save a lot of time using the LU decomposition.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "369dac00-a89f-4e94-9867-a924b40daa00",
+   "metadata": {},
+   "source": [
+    "## Obtaining an LU decomposition\n",
+    "\n",
+    "Row-reduction is a linear transformation (swapping rows, scalar multiplication, adding a multiple of one row to another).\n",
+    "\n",
+    "* Row reduce A to U\n",
+    "* Multiply elementary row operations together to get L (not completely obvious this is possible)\n",
+    "* Pivot when necessary \n",
+    "  * In case of zeros or near zero values when dividing; avoid subtractive cancellation. See Demo 2.6.1\n",
+    "\n",
+    "Herustic for permuting rows\n",
+    "  * in step $i$ (zeroing elements of column $i$)\n",
+    "    * start by putting the row with the largest magnitude entry in column $i$ into row $i$\n",
+    "    * i.e., `j = argmax(abs.(A[:,i]))`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5579fa32-e042-4b5b-a9be-ae808fa23a39",
+   "metadata": {},
+   "source": [
+    "## Stability\n",
+    "\n",
+    "A = [- epsilon, 1; 1 -1]. Demo 2.6.10\n",
+    "\n",
+    "If epsilon = 0, need to pivot. If epsilon >0, try without pivoting\n",
+    "\n",
+    "With epsilon = 1e-12 you lose about 10 digits of accuracy, but not due to the conditioning of the problem. Due to a poor algorithm. Pivoting gives the exact answer.\n",
+    "\n",
+    "No pivoting: L = [1, 0 ; -1/eps, 1 ] and U = [ -eps, 1, 0, 1/eps -1 ]\n",
+    "\n",
+    "L and U have condition number of about $1/\\epsilon^2$.\n",
+    "\n",
+    "There are A for which PLU is unstable, but these examples are generally unimportant and PLU algorithm is very useful (for solving general square linear systems)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40d5ea05-ad36-4d90-bd79-5942174b3d8d",
+   "metadata": {},
+   "source": [
+    "## Vector and Matrix norms (section 2.7)\n",
+    "\n",
+    "Function a vector space that measures the \"size\" or \"magnitude\" of a vector. Norm of 0 vector is 0 (and only this vector), norms are non-negative, scalar multiplication, triangle inequality.\n",
+    "\n",
+    "$$\\|x\\|_p = \\left(\\sum |x_i|^p\\right)^{1/p}$$\n",
+    "\n",
+    "$p = 1, 2, \\infty$ are common choices.\n",
+    "\n",
+    "unit vector $\\frac{x}{\\|x\\|}$.\n",
+    "\n",
+    "Frobenius norm for matrix $\\|A\\|_F = \\left(\\sum |A_{ij}|^2\\right)^{1/2}$.\n",
+    "\n",
+    "Lots more about Norms in the text and linear algebra courses.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2e1ab5-0cb6-44e1-8bc4-88cc95b8329a",
+   "metadata": {},
+   "source": [
+    "## Conditioning (Section 2.8)\n",
+    "\n",
+    "Start with $Ax=b$ and perturb it to $A(x+h) = b+d$.\n",
+    "\n",
+    "Find the relative change in the solution divided by the relative change in the 'data':\n",
+    "\n",
+    "$$ \\frac{\\frac{\\|h\\|}{\\|x\\|}}{\\frac{\\|d\\|}{\\|b\\|}}$$\n",
+    "\n",
+    "Bound on $h$: $Ax + Ah = b + d$, $Ah = d$, $h = A^{-1}d$, so $\\|h\\| \\leq \\|A^{-1}\\|\\cdot \\|d\\|$.\n",
+    "\n",
+    "Similar for $b$: $Ax = b$, $\\|A\\|\\cdot\\|x\\| \\geq \\|b\\|$.\n",
+    "\n",
+    "So \n",
+    "\n",
+    "$$\\frac{\\|h\\|\\cdot \\|b\\|}{\\|d\\|\\cdot\\|x\\|} \\leq \\|A\\|\\cdot\\|A^{-1}\\|$$\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdce4c1f-19cc-4787-9544-64ad6a791e70",
+   "id": "1f2253c0-3ab3-4fb6-aedc-12cda864d7da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +156,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.5"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
