--- a/W1-topics.ipynb
+++ b/W1-topics.ipynb
@@ -60,6 +60,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a431d8b0-ccad-47fe-a376-a4dfbfe86116",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "[Chapter 1](https://tobydriscoll.net/fnc-julia/intro/overview.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3f942f97-1d6c-4593-a3e4-12aeeeb2aaf5",
    "metadata": {},
    "source": [
@@ -195,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -203,7 +213,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
