--- a/Wx-interval-arithmetic.ipynb
+++ b/Wx-interval-arithmetic.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Interval arithmetic\n",
     "\n",
-    "In these examples we will learn how to XXX using interval arithmetic"
+    "In these examples we will learn how to do arithmetic and find roots using interval arithmetic."
    ]
   },
   {
