--- a/W2-topics.ipynb
+++ b/W2-topics.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Week 2\n",
     "\n",
-    "Linear sytems. Fundamentals of Numerical Computation, Chapter 2.\n"
+    "Linear sytems. Fundamentals of Numerical Computation, [Chapter 2](https://tobydriscoll.net/fnc-julia/linsys/overview.html).\n"
    ]
   },
   {
@@ -148,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -156,7 +156,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
