--- a/W2-julia.ipynb
+++ b/W2-julia.ipynb
@@ -18,37 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e2e5fabb-62d5-4eaf-bc61-5d6ff8ae8896",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5×5 Matrix{Float64}:\n",
-       " 1.0  0.0       0.0       0.0         0.0\n",
-       " 1.0  1.5708    2.4674    3.87578     6.08807\n",
-       " 1.0  3.14159   9.8696   31.0063     97.4091\n",
-       " 1.0  4.71239  22.2066  104.646     493.134\n",
-       " 1.0  6.28319  39.4784  248.05     1558.55"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N = 5\n",
-    "t = range(0, 2*pi, length = N)\n",
-    "y = sin.(t)\n",
-    "V = hcat( [t .^ i for i in 0:N-1]...) # How does this work? evaluate just the expression in the square brackets first"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "708e0a84-2066-46e2-9d69-794cf124f03a",
+   "id": "e2e5fabb-62d5-4eaf-bc61-5d6ff8ae8896",
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +39,44 @@
     }
    ],
    "source": [
+    "N = 5\n",
+    "t = range(0, 2*pi, length = N)\n",
+    "y = sin.(t)\n",
+    "V = hcat( [t .^ i for i in 0:N-1]...) # How does this work? evaluate just the expression in the square brackets first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "708e0a84-2066-46e2-9d69-794cf124f03a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Float64}:\n",
+       " 1.0  0.0       0.0       0.0         0.0\n",
+       " 1.0  1.5708    2.4674    3.87578     6.08807\n",
+       " 1.0  3.14159   9.8696   31.0063     97.4091\n",
+       " 1.0  4.71239  22.2066  104.646     493.134\n",
+       " 1.0  6.28319  39.4784  248.05     1558.55"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# loop to make V\n",
     "V = zeros(Float64, N, N)\n",
     "for i in 1:N\n",
     "    V[:, i] = t .^ (i-1)\n",
     "end\n",
     "# list comprehension to make a vector, then reshape to a matrix\n",
-    "V = reshape([ t[j] ^ (i-1) for i in 1:N for j in 1:N ], N, N)"
+    "V = reshape([ t[j] ^ (i-1) for i in 1:N for j in 1:N ], N, N) # fills down columns first\n",
+    "# double loop makes a matrix without reshaping - loop over rows first\n",
+    "V = [ t[j] ^ (i-1) for j in 1:N, i in 1:N ]"
    ]
   },
   {
@@ -1268,7 +1270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -1276,7 +1278,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
