--- a/W2-julia.ipynb
+++ b/W2-julia.ipynb
@@ -1260,9 +1260,28 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "68c12981-51a1-4770-8a7f-ca273b88f9bd",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "* create column, row vectors\n",
+    "* create matrix by combining vectors, from a function and pair of loops\n",
+    "* zeros, ones\n",
+    "* diagm, tril, triu, UpperTriangular, LowerTriangular\n",
+    "* rand (scalar, vector, matrix)\n",
+    "* matrix, vector multiply\n",
+    "* transpose ' (adjoint = complex conjugate transpose)\n",
+    "* solve \\\n",
+    "* scalar multiply (broadcasting with .)\n",
+    "* subsetting (indexes, :)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a361f0-26b6-43c2-9341-97f78bb2b340",
+   "id": "73dcc06a-8cd3-46a4-bc81-1535b1f580f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1278,7 +1297,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.5"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
