--- a/W2-topics.ipynb
+++ b/W2-topics.ipynb
@@ -138,9 +138,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f573ae28-ef73-40f9-9a97-816f49d3a317",
+   "metadata": {},
+   "source": [
+    "The condition number of a matrix $A$ is $\\kappa(A) = \\|A\\|\\cdot\\|A^{-1}\\|$. The value depends on the norm (1,2, $\\infty$, etc.) but we don't worry too much about that for interpretation. If $A$ is singular then $\\kappa(A) = \\infty$. If $A$ is close to a singular matrix (a perturbation of entries similar to what is required to represent the entries as floating point) it will be effectively singular.\n",
+    "\n",
+    "Example: Hilbert matrix $A_{ij} = \\frac{1}{1+i+j}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "edbe17a0-c204-4109-b018-d38745c2e137",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6708589868530223e8"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 6\n",
+    "hilbert = [ 1/(1+i+j) for i in 1:N, j in 1:N]\n",
+    "using LinearAlgebra\n",
+    "cond(hilbert)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4df602b0-d2a8-4e9d-9461-b9ebb20fefd9",
+   "metadata": {},
+   "source": [
+    "A symmetric matrix is positive definite if\n",
+    "\n",
+    "* $x^TAx > 0$ for all non-zero $x$, or equivalently\n",
+    "* the eigenvalues of A are all strictly positive.\n",
+    "\n",
+    "If a matrix is [symmetric, positive definite](https://mathworld.wolfram.com/PositiveDefiniteMatrix.html) there is a Cholesky decomposition: $A = LDL^T = R^TR$ where $R$ is upper triangular with positive numbers on the diagonal.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2253c0-3ab3-4fb6-aedc-12cda864d7da",
+   "id": "7f3efb22-3c08-4eba-906c-d43d9a838837",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -156,7 +204,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
