--- a/W1-Intro-to-Julia.ipynb
+++ b/W1-Intro-to-Julia.ipynb
@@ -1850,7 +1850,9 @@
    "id": "03cf2c58-f51c-4d9e-821f-5493f9a8fd94",
    "metadata": {},
    "source": [
-    "So integers (Int64, BigInt) get the sum right, but Float64 and BigInt get each term right (approximately). Explain what's going on in each calculation."
+    "So integers (Int64, BigInt) get the sum right, but Float64 and BigInt get each term right (approximately). Explain what's going on in each calculation.\n",
+    "\n",
+    "For more information about this problem, read about [Julia Robinson and Hilbert's 10th problem](https://www.sciencenews.org/article/how-julia-robinson-helped-define-limits-mathematical-knowledge) and watch this [Numberphile](https://youtu.be/zyG8Vlw5aAw) video. Wikipedia has an article on the [sum of three cubes](https://en.wikipedia.org/wiki/Sums_of_three_cubes) problem."
    ]
   },
   {
@@ -1990,7 +1992,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -1998,7 +2000,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
