--- a/W2-julia.ipynb
+++ b/W2-julia.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d5d8bb72-6350-4deb-be71-42e3303a1b1c",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "f7396854-ff30-422a-9fde-3d852ed47bd4",
    "metadata": {},
    "outputs": [
@@ -1118,12 +1118,12 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.413769  0.369379  0.551175\n",
-       " 0.369379  0.658234  0.715494\n",
-       " 0.551175  0.715494  1.18065"
+       " 0.171133  0.709569  0.846422\n",
+       " 0.709569  2.17714   1.83056\n",
+       " 0.846422  1.83056   2.03829"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,17 +1134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "2cc11427-5f94-4e17-8876-fd2d92a67923",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "true"
+       "false"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "6b6bb9cb-6215-4cc2-8900-e4ddf3d74fef",
    "metadata": {},
    "outputs": [
@@ -1163,12 +1163,12 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.0546729  0.127169  0.159239\n",
-       " 0.127169   0.439944  0.51122\n",
-       " 0.159239   0.51122   0.61352"
+       " 0.012089  0.149578  0.167565\n",
+       " 0.149578  2.26567   2.46335\n",
+       " 0.167565  2.46335   2.73278"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "642a00bb-b407-4d9c-ac20-db7dcf178f84",
    "metadata": {},
    "outputs": [
@@ -1189,12 +1189,12 @@
        "Cholesky{Float64, Matrix{Float64}}\n",
        "U factor:\n",
        "3×3 UpperTriangular{Float64, Matrix{Float64}}:\n",
-       " 0.233822  0.543872  0.681025\n",
-       "  ⋅        0.379667  0.37093\n",
-       "  ⋅         ⋅        0.110161"
+       " 0.10995  1.36042   1.52402\n",
+       "  ⋅       0.644145  0.605522\n",
+       "  ⋅        ⋅        0.208555"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "e42e2d9b-ed19-4f80-b9c9-e8ecc116411f",
    "metadata": {},
    "outputs": [
@@ -1213,12 +1213,12 @@
      "data": {
       "text/plain": [
        "3×3 LowerTriangular{Float64, Matrix{Float64}}:\n",
-       " 0.233822   ⋅         ⋅ \n",
-       " 0.543872  0.379667   ⋅ \n",
-       " 0.681025  0.37093   0.110161"
+       " 0.10995   ⋅         ⋅ \n",
+       " 1.36042  0.644145   ⋅ \n",
+       " 1.52402  0.605522  0.208555"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "22ace1ab-1c10-42d6-abcf-e9de73fd63af",
    "metadata": {},
    "outputs": [
@@ -1237,12 +1237,36 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 0.0546729  0.127169  0.159239\n",
-       " 0.127169   0.439944  0.51122\n",
-       " 0.159239   0.51122   0.61352"
+       " 0.012089  0.149578  0.167565\n",
+       " 0.149578  2.26567   2.46335\n",
+       " 0.167565  2.46335   2.73278"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C.L * C.L'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e795066b-5743-44b7-8247-2af2e00889ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 0.012089  0.149578  0.167565\n",
+       " 0.149578  2.26567   2.46335\n",
+       " 0.167565  2.46335   2.73278"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,14 +1274,6 @@
    "source": [
     "C.L * C.U"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e795066b-5743-44b7-8247-2af2e00889ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1289,7 +1305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -1297,7 +1313,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
