--- a/Wx-differentiate.ipynb
+++ b/Wx-differentiate.ipynb
@@ -13,12 +13,16 @@
    "id": "c243d6a1-4920-46ed-88cf-484fc5aa86b0",
    "metadata": {},
    "source": [
-    "Compute derivatives, first by finite differences, then by automatic differentiation."
+    "Compute derivatives, first by finite differences, then by automatic differentiation.\n",
+    "\n",
+    "These formulas are based on the definition of the derivative:\n",
+    "\n",
+    "$$f'(x) = \\lim_{h\\to 0}\\frac{f(x+h)-f(x)}{h}.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "b9652c16-5216-4e9b-93c3-5cca0b59aa06",
    "metadata": {},
    "outputs": [
@@ -28,7 +32,7 @@
        "centred_diff (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "f78c93b4-1515-46f6-a0ae-d1d5628ce2d1",
    "metadata": {},
    "outputs": [],
@@ -154,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "faf559d1-1e5d-4be1-a2b5-978369119c80",
    "metadata": {},
    "outputs": [],
    "source": [
     "Base.:+(a::DN, b::DN) = DN(a.val + b.val, a.deriv .+ b.deriv)\n",
-    "Base.:*(a::DN, b::DN) = DN(a.val*b.val, b.val.*a.deriv .+ a.val .*b.deriv)\n",
-    "Base.:^(a::DN, b) = DN(a.val^b, b.*a.val.^(b.-1).*a.deriv);"
+    "Base.:*(a::DN, b::DN) = DN(a.val * b.val, b.val .* a.deriv .+ a.val .* b.deriv)\n",
+    "Base.:^(a::DN, b) = DN(a.val^b, b .* a.val .^ (b .- 1) .* a.deriv);"
    ]
   },
   {
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "0e4572ab-e68e-4cc6-a5d4-99355af4af06",
    "metadata": {},
    "outputs": [],
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "0f71a2b2-0984-46b7-8459-81d2ef5b1e1c",
    "metadata": {},
    "outputs": [
@@ -204,7 +208,7 @@
        "DN(4.5, 6.0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "fa6cf0f6-3f43-469a-8ea2-503c622c0926",
    "metadata": {},
    "outputs": [
@@ -233,7 +237,7 @@
        "DN(4.5, [6.0, 6.0, 2.25])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +254,9 @@
    "id": "56eb4a2a-35e2-496e-b41d-7df038bbaf5d",
    "metadata": {},
    "source": [
-    "Define sin, cos, exp, log, abs, etc. in the same way."
+    "Define sin, cos, exp, log, abs, etc. in the same way.\n",
+    "\n",
+    "Until that's done, can't compute sin(a), a^a, log(a), exp(a), etc."
    ]
   },
   {
@@ -263,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "e1887be9-f960-48ee-9913-30279c1b5ed5",
    "metadata": {},
    "outputs": [],
@@ -273,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "94a8ce45-6371-45b2-b9ef-47116844c207",
    "metadata": {},
    "outputs": [
@@ -283,7 +289,7 @@
        "6.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "a17caa7b-f909-4d37-b02c-f1f8756575db",
    "metadata": {},
    "outputs": [
@@ -304,7 +310,7 @@
        "-20.752991086118303"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "2826f86e-f977-4c9e-b243-c490f9c22c0e",
    "metadata": {},
    "outputs": [
@@ -334,7 +340,7 @@
        "-20.752991086118303"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "235592a3-5cf9-434b-bdca-e2b2e4241203",
    "metadata": {},
    "outputs": [
@@ -356,7 +362,7 @@
        "-20.75299089493443"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "995502f1-c839-4bbd-b1af-6c701f95f905",
    "metadata": {},
    "outputs": [
@@ -383,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.015001 seconds\n"
+      "  0.012523 seconds\n"
      ]
     }
    ],
@@ -395,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "4f88aea5-a461-4589-8f99-609b5600d28d",
    "metadata": {},
    "outputs": [
@@ -403,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.008416 seconds\n"
+      "  0.006777 seconds\n"
      ]
     }
    ],
@@ -414,9 +420,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aac033ad-d653-49bc-81d3-26ce911cdc42",
+   "metadata": {},
+   "source": [
+    "More exotic examples and some unexpected results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ba712252-1b99-4845-9ea1-50a9a87802aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ForwardDiff.derivative(g, 2) = 6.772588722239782\n",
+      "2 ^ 2 * (1 + log(2)) = 6.772588722239782\n"
+     ]
+    }
+   ],
+   "source": [
+    "g(x) = x^x\n",
+    "@show ForwardDiff.derivative(g, 2)  # log y = x log x; y' = y (1 + log x)\n",
+    "@show 2^2 * (1 + log(2));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16f5c6ad-a019-4b44-951d-2cff4121a334",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f6cabc38-6eaf-47ec-b6f7-7499339fe658",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ForwardDiff.derivative(log, 0) = Inf\n",
+      "ForwardDiff.derivative(abs, 0) = 1\n",
+      "ForwardDiff.derivative(h1, 0) = -Inf\n",
+      "ForwardDiff.derivative(h2, 0) = NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "@show ForwardDiff.derivative(log, 0)\n",
+    "@show ForwardDiff.derivative(abs, 0)\n",
+    "h1(x) = 1/x\n",
+    "@show ForwardDiff.derivative(h1, 0)\n",
+    "h2(x) = sin(x)/x\n",
+    "@show ForwardDiff.derivative(h2, 0);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ece6a1d-2069-4805-9763-ba61147dea1d",
+   "id": "daee5e6b-552c-40be-846e-deea696a6dcf",
    "metadata": {},
    "outputs": [],
    "source": []
