--- a/Wx-julia-testing.ipynb
+++ b/Wx-julia-testing.ipynb
@@ -16,6 +16,8 @@
    "metadata": {},
    "source": [
     "## Hand crafted tests\n",
+    "\n",
+    "You should write some tests that check the results of specific calculations argree with values computed with a different algorithm or implementation.\n",
     "\n"
    ]
   },
@@ -111,6 +113,8 @@
    "metadata": {},
    "source": [
     "## Random tests\n",
+    "\n",
+    "Another good testing strategy is to write tests that can be evaluated at randomly sampled points.\n",
     "\n",
     "See documentation at https://docs.juliahub.com/RandomizedPropertyTest/mHBi5/0.1.0/\n",
     "\n",
@@ -326,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -334,7 +338,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.5"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
