--- a/hw-1-tutorial.ipynb
+++ b/hw-1-tutorial.ipynb
@@ -367,6 +367,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84fdd6c0-1cd4-408c-8a55-d512ab49244a",
+   "metadata": {},
+   "source": [
+    "You can also write this function inside square brackets to create a matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b7e9d5af-d9dc-4ee8-8e20-1064769fe1dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×4 Matrix{Int64}:\n",
+       " 1  2  3   4\n",
+       " 2  4  6   8\n",
+       " 3  6  9  12"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ i*j for i in 1:3, j in 1:4 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fcb4daf0-d5f1-4464-8462-dfbc1be9bc81",
    "metadata": {},
    "source": [
@@ -374,7 +406,7 @@
     "\n",
     "We showed how to plot a function in week 1. Here I'll show you how to add points and lines to a graph.\n",
     "    \n",
-    "First, plot a function using the function, the lower and upper limits on the domain.\n",
+    "First, plot a function using the function, the lower and upper limits on the domain. The lines don't appear when you view this file on GitHub; you need to download the ipynb file and open it in julia/jupyter on your computer to see them.\n",
     "\n",
     "The label argument is optional, but usually a good idea!"
    ]
