--- a/W3-topics.ipynb
+++ b/W3-topics.ipynb
@@ -1617,13 +1617,41 @@
    "id": "f62ef802-98a4-46a6-8591-b94401627d21",
    "metadata": {},
    "source": [
-    "Every real $m\\times n$ matrix $\\mathbf{A}$ ($m\\ge n$) can be written as $\\mathbf{A}=\\mathbf{Q}\\mathbf{R}$, where $\\mathbf{Q}$ is an $m\\times m$ orthogonal matrix and $\\mathbf{R}$ is an $m\\times n$ upper triangular matrix.\n"
+    "Vectors $u$ and $v$ are orthogonal if $u^Tv=0$. A set of vectors $u_i$ are orthogonal if $u_i^Tu_j=0$ for all $i\\neq j$. If $u_i^Tu_i=1$ for all $i$ the vectors are orthonormal.\n",
+    "\n",
+    "A matrix is orthogonal if it is square and the columns are orthonormal.\n",
+    "\n",
+    "Theorem. If $Q$ is orthonormal then:\n",
+    "\n",
+    "* $Q^T= Q^{-1}$\n",
+    "* $Q^T$ is orthonormal\n",
+    "* $\\kappa(Q) = 2$ using the 2-norm\n",
+    "* If $U$ is orthogonal then $QU$ is orthogonal\n",
+    "* For any $n$ x $n$ matrix $A$, $\\|AQ\\|_2 = \\|A\\|_2$.\n",
+    "\n",
+    "Every real $m\\times n$ matrix $\\mathbf{A}$ ($m\\ge n$) can be written as $\\mathbf{A}=\\mathbf{Q}\\mathbf{R}$, where $\\mathbf{Q}$ is an $m\\times m$ orthogonal matrix and $\\mathbf{R}$ is an $m\\times n$ upper triangular matrix.\n",
+    "\n",
+    "Can find $Q$ and $R$ by Gram-Schmidt orthogonalization. The algorithm is unstable so we don't use it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "433584cd",
+   "metadata": {},
+   "source": [
+    "If the number of rows $m$ is much larger than the number of columns $n$ then a more efficient version is often used. The rows $m+1$ to $n$ of $R$ are zero, so we don't need the columns $m+1$ to $n$ of $Q$. The thin QR factorization has $Q$ as an $m$ x $n$ matrix and $R$ a square $n$ x $n$ matrix.\n",
+    "\n",
+    "To solve a least squares problem, we solve $A^TAx = A^Tb$. Writing in QR form gives $R^TQ^TQRx = R^TQ^Tb$. This can be simplified to $R^TRx = R^TQ^Tb$. If the problem is well posed, $A$ has rank at least $m$ and so $R$ is non-singular. Thus we need to solve $Rx = Q^Tb$.\n",
+    "\n",
+    "This solution is numerically superior to a direct solution of the normal equations. See Demo 3.2.10 in the text.\n",
+    "\n",
+    "The QR decomposition can be computed using Householder reflections: $P = I - 2vv^T$ where $v$ is any unit vector (2-norm). A series of Householder reflections are constructed and then multiplied together to form Q and generate the upper triangular R."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7875b2f5-08fd-4838-8fbf-4f3413506a2c",
+   "id": "fd3896dd",
    "metadata": {},
    "outputs": [],
    "source": []
