--- a/W2-julia.ipynb
+++ b/W2-julia.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23d42625",
+   "id": "900a3500",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "00c87c12",
+   "id": "d6cee7c7",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4e8f3192",
+   "id": "9909f28b",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "96c55a92",
+   "id": "01220b08",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0e771876",
+   "id": "c1af7f17",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "48527e5e",
+   "id": "a0ffabc9",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8775b713",
+   "id": "dfc6b007",
    "metadata": {},
    "source": [
     "Check function in book"
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "33cd6286",
+   "id": "5f36a0ea",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bd5fdf58",
+   "id": "5d29feab",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4cbc18e8",
+   "id": "dbd74df3",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "dbe77090",
+   "id": "913b1392",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b96b34b0",
+   "id": "99d9b337",
    "metadata": {},
    "outputs": [
     {
@@ -1214,8 +1214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "d59e70bb",
+   "execution_count": 74,
+   "id": "44de8c35",
    "metadata": {},
    "outputs": [
     {
@@ -1227,18 +1227,18 @@
        " 3"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "b = [ 1, 2, 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "id": "f82f7b0c-a6ad-4bdd-a0ab-0482a1cf4d14",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1248,7 @@
        "3.7416573867739413"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "id": "2d02cb28-d3a8-4cbe-910a-a61180ca3574",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
        "3.7416573867739413"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "id": "463f7f22-11d9-44a2-ac9f-99465b843dd7",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1290,7 @@
        "6.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 78,
    "id": "d32a02cc-f482-43f3-837d-1c2bc366a508",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1311,7 @@
        "3.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,8 +1322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "dd9177d5",
+   "execution_count": 79,
+   "id": "6333c46f",
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
        " 0.501101  0.806831  1.15039"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e8a3c8cc",
+   "id": "845f198b",
    "metadata": {},
    "outputs": [
     {
@@ -1452,6 +1452,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "id": "d9b0e9f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 1.9867570401142678\n",
+       " 1.7687031765578953\n",
+       " 2.4583198966545097"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ sum(abs.(A[i, :])) for i in 1:3 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "id": "12732455-db18-4f2d-95bc-1ae1de0d1944",
    "metadata": {},
@@ -1494,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "id": "92cc019b-e483-4902-8dcf-867cb4410abe",
    "metadata": {},
    "outputs": [
@@ -1504,7 +1528,7 @@
        "62.044496157585066"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,8 +1539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "bc2d2679",
+   "execution_count": 85,
+   "id": "9a3698a9",
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1552,7 @@
        "  0.0          8.88178e-16  1.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "aea55fce",
+   "id": "82b4d996",
    "metadata": {},
    "outputs": [
     {
@@ -1560,8 +1584,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "9b572b0e",
+   "execution_count": 86,
+   "id": "4fd2788e",
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1594,7 @@
        "(86.23513668762268, 86.23513668762268)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,7 +1605,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
+   "id": "583caca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(91.71889204553743, 91.71889204553743)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond(A, Inf), opnorm(A, Inf) * opnorm(inv(A), Inf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "id": "e9d2f11c-af88-4794-9214-9742daea859f",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1645,7 @@
        " 0.0909091  0.0833333  0.0769231     0.0588235  0.0555556  0.0526316"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "id": "115c93a3-7dbd-4e3d-9055-b76eb27841a7",
    "metadata": {},
    "outputs": [
@@ -1622,7 +1667,7 @@
        "(1.3500941871102945e13, 7.074884363213305e12, 1.3500941849243812e13)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "id": "c35b2da6-824b-4bee-b58c-0dc98b0bdd71",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "id": "634a6e78-1fe4-4903-b99f-fd6961ff2cc5",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddf7e577",
+   "id": "d8e1171f",
    "metadata": {},
    "source": [
     "Exact calculation of inverse of Hilbert matrix"
@@ -1962,8 +2007,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "292397f3",
+   "execution_count": 93,
+   "id": "93673157",
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +2026,7 @@
        "   37413090//1  -1097450640//1      -161691060960//1    36380488716//1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,7 +2067,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.4",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -2030,7 +2075,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
